--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -390,5 +390,5 @@ volumes:
   tds_data:
   # SLCS web pages
   slcs_static_web:
-  # esgf-auth installation directory
+  # esgf-auth installation directory, including python virtual environment
   esgf_auth_install:
