--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -208,20 +208,15 @@ services:
     networks:
       - default
       - dbnetwork
-    # FIXME
     configs:
       - source: thredds_web_xml
-        target: /usr/local/tomcat/webapps/thredds/WEB-INF/web.xml2
+        target: /usr/local/tomcat/webapps/thredds/WEB-INF/web.xml
     secrets:
       - source: tomcat_esg-truststore_ts
         target: /usr/java/latest/jre/lib/security/jssecacerts
     volumes:
       - tds_data:/esg/content/thredds
       - $ESGF_CONFIG/esg/config/:/esg/config/ # TODO: secret&config
-      # FIXME: local jar with new AuthenticationRedirectFilter
-      - $ESGF_CONFIG/esg-orp-2.9.6.jar:/usr/local/tomcat/webapps/thredds/WEB-INF/lib/esg-orp-2.9.6.jar
-      # FIXME: use secret instead
-      - $ESGF_CONFIG/webapps/thredds/WEB-INF/web.xml:/usr/local/tomcat/webapps/thredds/WEB-INF/web.xml
     environment:
      - ESGF_HOSTNAME
     depends_on:
