--- a/esgf_config/httpd/conf/esgf-httpd.conf
+++ b/esgf_config/httpd/conf/esgf-httpd.conf
@@ -4,7 +4,7 @@
 LoadModule ssl_module modules/mod_ssl.so
 LoadModule wsgi_module modules/mod_wsgi-py27.so
 
-ServerName my-node.esgf.org
+ServerName my.esgf.node
 
 #Listen 80
 <VirtualHost *:80>
@@ -49,7 +49,7 @@ NameVirtualHost *:443
 WSGISocketPrefix run/wsgi
 
 <VirtualHost *:443>
-  ServerName my-node.esgf.org
+  ServerName my.esgf.node
 
   SSLEngine on
   SSLProxyEngine On
@@ -103,10 +103,6 @@ WSGISocketPrefix run/wsgi
   ProxyPassReverse /slcs http://esgf-slcs:5000 timeout=600
   ProxyPass /slcs-static http://slcs-nginx timeout=600
   ProxyPassReverse /slcs-static http://slcs-nginx timeout=600
-
-  # proxy requests for esgf-auth resources
-  #ProxyPass /esgf-auth http://esgf-data-node:8001 timeout=600
-  #ProxyPassReverse /esgf-auth http://esgf-data-node:8001 timeout=600
 
   # Node Manager
   WSGIDaemonProcess esgfnm python-path=/opt/esgf/virtual/python/lib/python2.7/site-packages:/usr/local/esgf-node-manager/src/python/server user=apache group=apache threads=5
