--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -226,6 +226,8 @@ services:
       placement:
         constraints: [node.labels.esgf_data_node == true]
 
+  # note: this service must run on the same host as the httpd front-end
+  # so they can share data in the volume 'esgf_auth_install'
   esgf-auth:
     image: ${ESGF_IMAGES_HUB-esgfhub}/esgf-auth:${ESGF_VERSION-latest}
     volumes:
@@ -385,5 +387,5 @@ volumes:
   tds_data:
   # SLCS web pages
   slcs_static_web:
-  # esgf-auth installation directory, including python virtual environment
+  # esgf-auth installation directory, including python virtual environment and sqllite database
   esgf_auth_install:
