turn $ESGF_CONFIG into secret for cog

--- a/cog/Dockerfile
+++ b/cog/Dockerfile
@@ -107,6 +107,7 @@ COPY  scripts/ /usr/local/bin/
 COPY conf/supervisord.cog.conf /etc/supervisor/conf.d/supervisord.cog.conf
 # wait for Postgred connection to be ready
 COPY scripts/wait_for_postgres.sh /usr/local/bin/wait_for_postgres.sh
+COPY scripts/process_esgf_config_archive.sh /usr/local/bin/process_esgf_config_archive.sh
 ENTRYPOINT ["/usr/local/bin/docker-entrypoint.sh"]
 # will override these CMD options at run time
 CMD ["localhost", "false", "true"]
