Slight change to increase security of HTTPD configuration.

--- a/esgf_config/httpd/conf/esgf-httpd.conf
+++ b/esgf_config/httpd/conf/esgf-httpd.conf
@@ -54,9 +54,9 @@ WSGISocketPrefix run/wsgi
   SSLEngine on
   SSLProxyEngine On
 
-  SSLProtocol -all +tlsv1.2
+  SSLProtocol -all +TLSv1.2
   SSLCipherSuite ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA256
-  SSLHonorCipherOrder     on
+  SSLHonorCipherOrder on
 
   SSLVerifyClient optional
   SSLVerifyDepth  10
@@ -70,6 +70,7 @@ WSGISocketPrefix run/wsgi
   # security headers
   Header always set Strict-Transport-Security "max-age=31536000; includeSubDomains; preload”
   Header always set X-Content-Type-Options nosniff
+  TraceEnable Off
 
   RequestHeader set SSL_CLIENT_S_DN "%{SSL_CLIENT_S_DN}s"
   RequestHeader set SSL_CLIENT_I_DN "%{SSL_CLIENT_I_DN}s"
