Inserting the WSGIPassAuthorization On directive

--- a/esgf_config/httpd/conf/esgf-httpd.conf
+++ b/esgf_config/httpd/conf/esgf-httpd.conf
@@ -108,6 +108,7 @@ WSGISocketPrefix run/wsgi
   # Node Manager
   WSGIDaemonProcess esgfnm python-path=/opt/esgf/virtual/python/lib/python2.7/site-packages:/usr/local/esgf-node-manager/src/python/server user=apache group=apache threads=5
   WSGIScriptAlias /esgf-nm /usr/local/esgf-node-manager/src/python/server/nodemgr/apache/wsgi.py
+  WSGIPassAuthorization On
   <Directory /usr/local/esgf-nodemgr-doc/code/server/nodemgr/apache>
      Order allow,deny
      Allow from all
