Inserting more WSGIPassAuthorization On

--- a/esgf_config/httpd/conf/esgf-httpd.conf
+++ b/esgf_config/httpd/conf/esgf-httpd.conf
@@ -122,6 +122,7 @@ WSGISocketPrefix run/wsgi
   # ESGF Authentication Relying Party
   WSGIDaemonProcess esgf_auth python-path=/usr/local/esgf-auth/src/esgf-auth:/usr/local/esgf-auth/venv/lib/python2.7/site-packages
   WSGIScriptAlias /esgf-auth /usr/local/esgf-auth/src/esgf-auth/esgf_auth/wsgi.py process-group=esgf_auth
+  WSGIPassAuthorization On
   <Directory /usr/local/esgf-auth/src/esgf-auth/esgf_auth>
       <Files wsgi.py>
           # Apache >= 2.4
@@ -146,6 +147,7 @@ WSGISocketPrefix run/wsgi
   # note: WSGIPythonEggs must match location created by Dockerfile
   WSGIDaemonProcess cog-site python-path=/usr/local/cog/venv/lib/python2.7/site-packages:/usr/local/cog/cog-install python-eggs=/var/www/.python-eggs user=apache group=apache threads=25
   WSGIScriptAlias / /usr/local/cog/cog_install/apache/wsgi.py
+  WSGIPassAuthorization On
   Alias /static/ /usr/local/cog/cog_install/static/
   <Directory /usr/local/cog/cog_install/static>
       Options -Indexes
