Externalizing the esgf-auth SECRET_KEY

--- a/esgf_config/esg/config/esgf_auth_config.json
+++ b/esgf_config/esg/config/esgf_auth_config.json
@@ -1,4 +1,5 @@
 {
-"ESGF_HOSTNAME":"my-node.esgf.org",
-"ESGF_SECRET_KEY":"A7JiFckYWpqezusdOfJoH[=="
+"ESGF_HOSTNAME":"localhost",
+"ESGF_SECRET_KEY":"A7JiFckYWpqezusdOfJoH[==",
+"DJANGO_SECRET_KEY":"5_7$jn1-c8h5@(e$x8fhk=&!mk=ea6=irwm+b22nu)h=rhox46"
 }
