Adding SLCS endpoints to Yadis document.

--- a/esgf_config/esg/config/esgf.properties
+++ b/esgf_config/esg/config/esgf.properties
@@ -43,4 +43,4 @@ dashboard.service.app.home=/usr/local/tomcat/webapps/esgf-dashboard
 # node manager
 node.peer.group=esgf-test
 # short lived certificate server
-esg.security.slcs.endpoint=slcs.ceda.ac.uk
+short.lived.certificate.server=my.esgf.node
