--- a/esgf_config/httpd/conf/esgf-httpd.conf
+++ b/esgf_config/httpd/conf/esgf-httpd.conf
@@ -100,8 +100,8 @@ WSGISocketPrefix run/wsgi
   # ProxyPassReverse /las   ajp://localhost:8009/las
   
   # proxy requests for slcs resources
-  ProxyPass /slcs http://esgf-slcs:5000 timeout=600
-  ProxyPassReverse /slcs http://esgf-slcs:5000 timeout=600
+  ProxyPass /esgf-slcs http://esgf-slcs:5000 timeout=600
+  ProxyPassReverse /esgf-slcs http://esgf-slcs:5000 timeout=600
   ProxyPass /slcs-static http://slcs-nginx timeout=600
   ProxyPassReverse /slcs-static http://slcs-nginx timeout=600
 
