--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -76,11 +76,6 @@ secrets:
           ##################### ESGF SECRETS ##################
   esgf_config_files:
     file: $ESGF_CONFIG/archives/esgf_config.tar.xz
-          ##################### ESGF-AUTH SECRETS ##################
-  esgf_auth_config:
-    file: $ESGF_CONFIG/esg/config/esgf_auth_config.json
-  esgf_oauth2_secrets:
-    file: $ESGF_CONFIG/esg/config/esgf_oauth2.json
 
 
 services:
@@ -273,10 +268,6 @@ services:
       - source: esgf_config_files
         target: /root/archives/esgf_config.tar.xz
         mode:   0600
-      - source: esgf_auth_config
-        target: /esg/config/esgf_auth_config.json
-      - source: esgf_oauth2_secrets
-        target: /esg/config/esgf_oauth2.json
     volumes:
       - cog_install_dir:/usr/local/cog/cog_install
       - cog_venv:/usr/local/cog/venv
@@ -285,6 +276,7 @@ services:
       # - esgf-node-manager
     environment:
       - SSL_CERT_DIR=/etc/grid-security/certificates
+      - SSL_CERT_FILE=/etc/certs/esgf-ca-bundle.crt
       - COG_CONFIG_DIR=/usr/local/cog/cog_config
       - ESGF_HOSTNAME
     ports:
