Working on index-node deployment

--- a/kubernetes/solr-deployment.yaml
+++ b/kubernetes/solr-deployment.yaml
@@ -8,6 +8,7 @@ spec:
     metadata:
       labels:
         stack: esgf
+        app: index-node
     spec:
       containers:
       - name: esgf-solr
