--- a/kubernetes/solr-deployment.yaml
+++ b/kubernetes/solr-deployment.yaml
@@ -1,7 +1,30 @@
+apiVersion: v1
+kind: Service
+metadata:
+  name: esgf-solr
+  labels:
+    stack: esgf
+    app: index-node
+spec:
+  type: NodePort
+  ports:
+  - port: 8983 # host port
+    targetPort: 8983 # container port
+    protocol: TCP
+    name: solr-slave
+  - port: 8984
+    targetPort: 8984
+    protocol: TCP
+    name: solr-master
+  # the selector identifies the set of pods to load-balance against
+  selector:
+    stack: esgf
+    app: index-node
+---
 apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
-  name: esgf-solr-deployment
+  name: esgf-solr
 spec:
   replicas: 1
   template:
