Working on data node modularization.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,9 +48,34 @@ services:
        - pg_data:/var/lib/pgsql/data
 
   # ESGF Data Node
-  esgf-data-node:
-    image: esgfhub/esgf-data-node:${ESGF_VERSION}
-    container_name: data-node
+  #esgf-data-node:
+  #  image: esgfhub/esgf-data-node:${ESGF_VERSION}
+  #  container_name: data-node
+  #  expose:
+  #    - "8080"
+  #    - "8443"
+  #  ports:
+  #    - "8080:8080"
+  #    - "8443:8443"
+  #  networks:
+  #    - default
+  #    - dbnetwork 
+  #  volumes:
+  #    - tds_data:/esg/content/thredds
+  #    - $ESGF_CONFIG/webapps/thredds/WEB-INF/web.xml:/usr/local/tomcat/webapps/thredds/WEB-INF/web.xml
+  #    - $ESGF_DATA_DIR:/esg/data
+      #- $ESGF_CONFIG/grid-security/certificates/:/etc/grid-security/certificates/
+      #- $ESGF_CONFIG/globus/certificate-file:/root/.globus/certificate-file
+  #  volumes_from:
+  #    - esgf-config
+  #  environment:
+  #   - ESGF_HOSTNAME
+  #  depends_on:
+  #    - esgf-postgres
+
+  esgf-tds:
+    image: esgfhub/esgf-tds:${ESGF_VERSION}
+    container_name: tds
     expose:
       - "8080"
       - "8443"
@@ -59,19 +84,18 @@ services:
       - "8443:8443"
     networks:
       - default
-      - dbnetwork 
+      - dbnetwork
     volumes:
       - tds_data:/esg/content/thredds
       - $ESGF_CONFIG/webapps/thredds/WEB-INF/web.xml:/usr/local/tomcat/webapps/thredds/WEB-INF/web.xml
       - $ESGF_DATA_DIR:/esg/data
-      #- $ESGF_CONFIG/grid-security/certificates/:/etc/grid-security/certificates/
-      #- $ESGF_CONFIG/globus/certificate-file:/root/.globus/certificate-file
     volumes_from:
       - esgf-config
     environment:
      - ESGF_HOSTNAME
     depends_on:
       - esgf-postgres
+
 
   # ESGF-Auth client
   esgf-auth:
