--- a/esgf_config/httpd/conf/esgf-httpd.conf
+++ b/esgf_config/httpd/conf/esgf-httpd.conf
@@ -31,8 +31,8 @@ ServerName my.esgf.node
   ProxyPassReverse /esg-search ajp://esgf-index-node:8009/esg-search
 
   # proxy /thredds requests to Tomcat
-  ProxyPass /thredds ajp://esgf-data-node:8009/thredds
-  ProxyPassReverse /thredds ajp://esgf-data-node:8009/thredds
+  ProxyPass /thredds ajp://esgf-tds:8009/thredds
+  ProxyPassReverse /thredds ajp://esgf-tds:8009/thredds
 
   # proxy /esgf-stats-api requests to Tomcat
   ProxyPass /esgf-stats-api ajp://esgf-data-node:8009/esgf-stats-api
@@ -88,8 +88,8 @@ WSGISocketPrefix run/wsgi
   ProxyPassReverse /esgf-idp      ajp://esgf-idp-node:8009/esgf-idp
   ProxyPass /esg-search   ajp://esgf-index-node:8009/esg-search
   ProxyPassReverse /esg-search    ajp://esgf-index-node:8009/esg-search
-  ProxyPass /thredds      ajp://esgf-data-node:8009/thredds
-  ProxyPassReverse /thredds       ajp://esgf-data-node:8009/thredds
+  ProxyPass /thredds      ajp://esgf-tds:8009/thredds
+  ProxyPassReverse /thredds       ajp://esgf-tds:8009/thredds
   ProxyPass /esgf-stats-api       ajp://esgf-data-node:8009/esgf-stats-api
   ProxyPassReverse /esgf-stats-api  ajp://esgf-data-node:8009/esgf-stats-api
   # ProxyPass /esgf-dashboard       ajp://localhost:8009/esgf-dashboard
