--- a/esgf_config/httpd/conf/esgf-httpd.conf
+++ b/esgf_config/httpd/conf/esgf-httpd.conf
@@ -82,8 +82,8 @@ WSGISocketPrefix run/wsgi
   ProxyPassReverse        /solr   http://esgf-solr:8983/solr
 
   # proxy requests to Tomcat
-  ProxyPass       /esg-orp        ajp://esgf-data-node:8009/esg-orp
-  ProxyPassReverse /esg-orp       ajp://esgf-data-node:8009/esg-orp
+  ProxyPass       /esg-orp        ajp://esgf-orp:8009/esg-orp
+  ProxyPassReverse /esg-orp       ajp://esgf-orp:8009/esg-orp
   ProxyPass /esgf-idp     ajp://esgf-idp-node:8009/esgf-idp
   ProxyPassReverse /esgf-idp      ajp://esgf-idp-node:8009/esgf-idp
   ProxyPass /esg-search   ajp://esgf-index-node:8009/esg-search
